--- a/app/src/main/res/layout/fragment_item_list_animals.xml
+++ b/app/src/main/res/layout/fragment_item_list_animals.xml
@@ -39,7 +39,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@drawable/gato" />
+                app:srcCompat="@drawable/paws4adoption_logo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
