--- a/app/src/main/res/layout/fragment_list_adoption_animals.xml
+++ b/app/src/main/res/layout/fragment_list_adoption_animals.xml
@@ -3,20 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ListAdoptionAnimalsFragment">
+    tools:context=".views.ListAnimalsFragment">
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/swipe">
+
             <ListView
                 android:id="@+id/lvListAdoptionAnimal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             </ListView>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </FrameLayout>
