--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/colorPrimary"
+    android:layout_height="wrap_content"
+    android:background="@color/colorAccent"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:layout_marginTop="12dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -15,8 +15,6 @@
         android:layout_height="150dp"
         app:srcCompat="@drawable/paws4adoption_logo"
         android:textColor="@color/design_default_color_background"/>
-
-
 
     <TextView
         android:id="@+id/tvUsername"
