--- a/app/src/main/res/layout/activity_organization_details.xml
+++ b/app/src/main/res/layout/activity_organization_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,24 +20,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="25dp" />
 
-            <ImageView
-                android:id="@+id/ivLogo"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="@string/organization_photo"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="25dp" />
-
             <TextView
                 android:id="@+id/tvName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="casual"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textColor="#272727"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
             <Space
                 android:layout_width="match_parent"
@@ -46,7 +36,7 @@
 
             <TextView
                 android:id="@+id/tvAddress"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
 
@@ -56,7 +46,7 @@
 
             <TextView
                 android:id="@+id/tvPostalCode"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
 
@@ -66,7 +56,7 @@
 
             <TextView
                 android:id="@+id/tvDistrict"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
 
@@ -76,7 +66,7 @@
 
             <TextView
                 android:id="@+id/tvEmail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:textAlignment="center" />
@@ -87,16 +77,9 @@
 
             <TextView
                 android:id="@+id/tvPhone"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/get_animals"
-                android:onClick="onClickGetAnimals"/>
 
         </LinearLayout>
 
