--- a/app/src/main/res/layout/activity_animal_details.xml
+++ b/app/src/main/res/layout/activity_animal_details.xml
@@ -208,7 +208,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textView16"
