--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -85,6 +85,7 @@
                     android:orientation="horizontal">
 
                     <ListView
+                        android:id="@+id/lvMosquittoListNewAdoptionAnimals"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </LinearLayout>
